# ida-forge

./: .pythonrc  LICENSE  README.md  pyproject.toml
qt_uis/: structure_builder.ui  templated_types.ui
src/: forge.py
src/forge/: __init__.py  core.py  feature_manager.py  plugin.py
src/forge/api/: cache.py  config.py  hexrays.py  hooks.py  members.py  scan_object.py  scanner.py  storage.py  structure.py  tinfo.py  types.py  ui.py  ui_actions.py  visitor.py
src/forge/features/convert_to_usercall/: __init__.py  convert_to_usercall.py
src/forge/features/create_new_field/: __init__.py  create_new_field.py
src/forge/features/guess_allocation/: __init__.py  guess_allocation.py
src/forge/menu/: __init__.py  about.py  about.ui  reload.py  ui_about.py
src/forge/util/: cxx_to_c_name.py  itanium_mangler.py  logging.py  qt.py  reload.py  singleton.py  util.py  versions.py
tests/: conftest.py
tests/fixtures/c_pure_structs/: build.sh
tests/fixtures/cpp_complex/: build.sh  build_debug.sh
tests/unit/: test_build_ui.py  test_cache.py  test_config.py  test_feature_manager.py  test_guess_allocation.py  test_hexrays.py  test_hooks.py  test_members_parse.py  test_plugin_reload.py  test_reload_action.py  test_reload_util.py  test_scan_object.py  test_scanner.py  test_storage.py  test_structure.py  test_structure_builder_actions.py  test_structure_builder_form.py  test_structure_stats.py  test_templated_types.py  test_types.py  test_ui.py  test_ui_actions.py  test_versions.py  test_visitor.py
util/: README.md  build_ui.py  data.json  gui_test.py  reload.py
(+25 files in other folders)
